hphp/hack/test/typecheck/optional_parameters_not_supported.php
<?hh

interface I {
  public function foo(int $x, optional bool $y, optional string $z):void;
}
